homelan/6-kube-dashboard/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-route-tls
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k8-dash.kirbyware.com`) 
      kind: Rule
      # middlewares:
      #   - name: test-stripprefix
      #     namespace: test
      services:    
      - kind: Service
        name: kubernetes-dashboard
        namespace: kubernetes-dashboard
        port: 9090
  tls:
    # options:
    #   name: tlsoptions
    #   namespace: traefik
    secretName: test-kirbyware-com-production-tls
    store:
      name: default
      namespace: traefik
